# event-throughtput-tests

./: README.md  docker-compose.yml
endpoint/: index.js  package.json
js/: index.js  package.json
kotlin/: build.gradle.kts
kotlin/quarkus/: build.gradle.kts
kotlin/quarkus/src/main/kotlin/org/acme/models/: DatabaseModel.kt  EndpointModel.kt
kotlin/quarkus/src/main/kotlin/org/acme/services/: Consumer.kt  Database.kt  Endpoint.kt
kotlin/quarkus/src/main/resources/: application.properties
kotlin/spring/src/main/kotlin/com/example/demo/config/: EndpointConfig.kt  KafkaConfig.kt
kotlin/spring/src/main/kotlin/com/example/demo/models/: DatabaseModel.kt  EndpointModel.kt
kotlin/spring/src/main/kotlin/com/example/demo/services/: Consumer.kt  DatabaseRepository.kt  Endpoint.kt
kotlin/spring/src/main/resources/: application.properties
kotlin/src/main/kotlin/com/example/demo/models/: DatabaseModel.kt
rust/: Cargo.toml
rust/src/: args.rs  http.rs  kafka.rs  main.rs  model.rs  mongodb.rs
scripts/: load-data.sh  make-data.js  package.json  run.js
